src/components/atomes/Navigation/style.scss
@import "@sass/main";

.navbar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background: var(--black, #111013);
  border-bottom: 1px solid var(--border, rgba(255, 255, 255, 0.1));
  min-height: 72px;

  a {
    text-decoration: none;
  }

  * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Satoshi";
    font-style: normal;
    line-height: normal;
    font-size: 12px;
    color: var(--white, #fff);
  }

  .navbar__mobile {
    top: 73px;
    position: absolute;
    width: 100%;
    height: 50px;
    background-color: #28262c;
    z-index: 10;

    display: flex;
    flex-direction: row;
    justify-content: space-between;

    ul {
      display: flex;
      flex-direction: row;
      height: 100%;
      align-items: center;
      justify-content: space-around;

      li {
        margin: 0 10px;

        a {
          font-family: "Satoshi";
          font-weight: 600;
          font-size: 14px;
          text-transform: uppercase;

          &:hover {
            color: var(--lime, #fbd52b);
          }
        }
      }
    }

    > div {
      display: flex;
      flex-direction: row;
      height: 100%;
      > a, > button {
        border: none;
        outline: none;
        font-size: 14px;
        text-decoration: none;
        padding: 15px;
        text-align: center;
        font-family: "Satoshi";
        font-weight: 700;
      }
    }
  }

  .navbar__left {
    display: flex;
    flex-direction: row;
    align-items: center;

    .navbar__toggle {
      cursor: pointer;
      outline: none;
      border: none;

      display: flex;
      align-items: center;
      justify-content: center;
      background: #28262c;

      width: 52px;
      height: 100%;
      svg {
        width: 28px;
        height: 22px;
        color: white;
      }
    }

    .navbar__logo {
      display: flex;
      flex-direction: row;
      align-items: center;
      margin-left: 2px;

      h1 {
        color: var(--white, #fff);
        font-size: 20px;
        font-weight: 900;
        line-height: normal;
      }
    }
  }

  .navbar_auth {
    border: none;
    cursor: pointer;
    text-transform: uppercase;
    font-weight: 700;
    color: white;
    padding: 14px 30px;
    height: 73px;
  }

  .navbar__right {
    display: flex;
    flex-direction: row;

    .navbar__language {
      display: flex;
      flex-direction: row;
      align-items: center;
      cursor: pointer;

      color: rgba(255, 255, 255, 0.6);

      &:hover {
        color: rgba(255, 255, 255, 1);
      }

      select {
        color: inherit;
        cursor: inherit;

        border: none;
        border-left: 1px solid var(--border, rgba(255, 255, 255, 0.1));
        background-color: transparent;
        text-transform: uppercase;
        padding: 14px 14px 14px 16px;
        height: 100%;

        background: none;
        -moz-appearance: none;
        -webkit-appearance: none;
        appearance: none;
        font-weight: 700;

        &:after {
          content: "▼";
          font-size: 12px;
          color: white;
          padding-left: 8px;
        }
      }

      svg {
        margin-right: 14px;
      }
    }
    > a {
      text-decoration: none;
      text-transform: uppercase;
      color: var(--black, #111013);
      padding: 14px 16px;
      background: var(--lime, #fbd52b);

      display: flex;
      flex-direction: row;
      align-items: center;
      gap: 8px;
      font-weight: 700;

      img {
        width: 24px;
      }
    }
  }
}

@media screen and (min-width: 768px) {
  .navbar {
    * {
      font-size: 16px;
    }

    .navbar__left {
      .navbar__toggle {
        width: 72px;
      }

      .navbar__logo {
        margin-left: 14px;

        h1 {
          font-size: 24px;
        }
      }
    }

    .navbar__right {
      .navbar__language {
        select {
          padding: 20px 8px 20px 24px;
          text-transform: none;
        }

        svg {
          margin-right: 20px;
        }
      }

      > a {
        padding: 20px 20px 20px 24px;
      }
    }
  }
}

@media screen and (min-width: 1280px) {
  .navbar {
    .navbar__middle {
      ul {
        display: flex;
        flex-direction: row;
        list-style: none;

        li {
          margin: 0 32px;

          a {
            cursor: pointer;

            color: rgba(255, 255, 255, 0.6);
            font-size: 16px;
            font-weight: 700;

            &:hover {
              color: rgba(255, 255, 255, 1);
            }
          }
        }
      }
    }
  }
}

